--- a/OdeToFood/OdeToFood/OdeToFood.Data/OdeToFood.Data.csproj
+++ b/OdeToFood/OdeToFood/OdeToFood.Data/OdeToFood.Data.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OdeToFood.Core\OdeToFood.Core.csproj" />
+  </ItemGroup>
+
 </Project>
